kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: leverage-analyzer-service
spec:
  selector:
    app: leverage-analyzer
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30000 # 30000-32767 범위 내에서 선택 (개발 목적)
